[tool.poetry]
name = "coalesce-audio-processor"
version = "0.1.0"
description = "API server for transcription and audio pre-processing"
authors = ["Max Goodhart <c@chromakode.com>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{include = "coalesce_audio_processor"}]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.9"
faster-whisper = "^0.9.0"
pydub = "^0.25.1"
aiohttp = "^3.8.4"
nanoid = "^2.0.0"
websockets = "^11.0.3"
aiohttp-retry = "^2.8.3"

[tool.poetry.group.runpod]
optional = true

[tool.poetry.group.runpod.dependencies]
runpod = "^1.1.1"

[tool.poetry.group.dev.dependencies]
watchfiles = "^0.19.0"

[tool.poetry.scripts]
coalesce_process_audio = 'coalesce_audio_processor.audio:cli'
coalesce_http_worker = 'coalesce_audio_processor.worker.http:main'
coalesce_runpod_worker = 'coalesce_audio_processor.worker.runpod:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
